--- a/requirements.txt
+++ b/requirements.txt
@@ -1,335 +1,16 @@
-absl-py==2.1.0
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.11
-aiosignal==1.3.2
-altair==5.5.0
-anaconda-anon-usage @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_60q98_n2ty/croot/anaconda-anon-usage_1732732446690/work
-annotated-types==0.7.0
-anthropic==0.45.2
-anyio==4.7.0
-appnope==0.1.4
-archspec @ file:///croot/archspec_1709217642129/work
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
-astunparse==1.6.3
-async-lru==2.0.4
-attrs==24.3.0
-Automat==25.4.16
-babel==2.16.0
-beautifulsoup4==4.12.3
-bleach==6.2.0
-blessed==1.20.0
-blinker==1.9.0
-blis==1.2.0
-boltons @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/boltons_1699240838368/work
-Brotli @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_27zk0eqdh0/croot/brotli-split_1714483157007/work
-cachetools==5.5.1
-catalogue==2.0.10
-catboost==1.2.8
-certifi @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_d8j59rqun5/croot/certifi_1734473289913/work/certifi
-cffi @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_06ndtibm2c/croot/cffi_1726856446111/work
-chardet==5.2.0
-charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
-click==8.1.8
-cloudpathlib==0.20.0
-cloudpickle==3.1.1
-colorama==0.4.6
-comm @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_3doui0bmzb/croot/comm_1709322861485/work
-conda @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_1fyf6atcn3/croot/conda_1733841827946/work
-conda-anaconda-telemetry @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_3cfn48l126/croot/conda-anaconda-telemetry_1733258799801/work
-conda-content-trust @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_9fusbfzixa/croot/conda-content-trust_1714483157715/work
-conda-libmamba-solver @ file:///croot/conda-libmamba-solver_1727775630457/work/src
-conda-package-handling @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_82jv6q9ech/croot/conda-package-handling_1731369032774/work
-conda_package_streaming @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_2el5nlypud/croot/conda-package-streaming_1731366187356/work
-confection==0.1.5
-configparser==7.2.0
-constantly==23.10.4
-contourpy==1.3.1
-coverage==7.6.10
-coveralls==4.0.1
-cryptography @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_c5inr2hqv1/croot/cryptography_1732129882466/work
-cycler==0.12.1
-cymem==2.0.11
-dataclasses-json==0.6.7
-debugpy==1.8.11
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
-defusedxml==0.7.1
-distro @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_ddkyz0575y/croot/distro_1714488254309/work
-dnspython==2.7.0
-docopt==0.6.2
-editor==1.6.6
-email_validator==2.2.0
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
-et_xmlfile==2.0.0
-executing==2.1.0
-faiss-cpu==1.9.0.post1
-fastjsonschema==2.21.1
-filelock==3.16.1
-flatbuffers==24.12.23
-fonttools==4.55.3
-fqdn==1.5.1
-frozendict @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_8b0cest_id/croot/frozendict_1713194839836/work
-frozenlist==1.5.0
-fsspec==2024.12.0
-future==1.0.0
-gast==0.6.0
-gensim==4.3.3
-genson==1.3.0
-gitdb==4.0.12
-GitPython==3.1.44
-google-ai-generativelanguage==0.6.6
-google-api-core==2.24.1
-google-api-python-client==2.160.0
-google-auth==2.38.0
-google-auth-httplib2==0.2.0
-google-generativeai==0.7.2
-google-pasta==0.2.0
-googleapis-common-protos==1.66.0
-graphviz==0.20.3
-grpcio==1.68.1
-grpcio-status==1.62.3
-h11==0.14.0
-h5py==3.12.1
-httpcore==1.0.7
-httplib2==0.22.0
-httpx==0.27.2
-huggingface-hub==0.28.1
-hyperlink==21.0.0
-hypothesis==6.131.1
-idna @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a12xpo84t2/croot/idna_1714398852854/work
-imageio==2.36.1
-imbalanced-learn==0.13.0
-imblearn==0.0
-incremental==24.7.2
-inflection==0.5.1
-iniconfig==2.0.0
-inputimeout==1.0.4
-inquirer==3.4.0
-ipykernel==6.29.5
-ipython==8.31.0
-ipywidgets @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_10ipy26y_e/croot/ipywidgets_1733504600128/work
-isoduration==20.11.0
-jedi @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_38ctoinnl0/croot/jedi_1733987402850/work
-Jinja2==3.1.5
-jiter==0.8.2
-joblib==1.4.2
-json5==0.10.0
-jsonpatch @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_3ajyoz8zoj/croot/jsonpatch_1714483362270/work
-jsonpointer==2.1
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-jupyter==1.1.1
-jupyter-console==6.6.3
-jupyter-events==0.11.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.15.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.3.4
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_85lmboja__/croot/jupyterlab_widgets_1733441511710/work
-keras==3.7.0
-kiwisolver==1.4.7
-langchain==0.2.11
-langchain-anthropic==0.1.23
-langchain-community==0.2.10
-langchain-core==0.2.36
-langchain-google-genai==1.0.10
-langchain-huggingface==0.0.3
-langchain-ollama==0.1.3
-langchain-openai==0.1.17
-langchain-text-splitters==0.2.2
-langcodes==3.5.0
-langsmith==0.1.93
-language_data==1.3.0
-lazy_loader==0.4
-Levenshtein==0.25.1
-lib_resume_builder_AIHawk @ git+https://github.com/feder-cr/lib_resume_builder_AIHawk.git@82ce12b83c67364a4ca6393701f2988ac9158855
-libclang==18.1.1
-libmambapy @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d5syec3wec/croot/mamba-split_1732896308505/work/libmambapy
-lime==0.2.0.1
-llvmlite==0.44.0
-loguru==0.7.2
-marisa-trie==1.2.1
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-marshmallow==3.26.0
-matplotlib==3.10.0
-matplotlib-inline @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/matplotlib-inline_1699242375920/work
-mdurl==0.1.2
-menuinst @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_46xe5v9lzp/croot/menuinst_1731364926974/work
-mistune==3.0.2
-ml-dtypes==0.4.1
-mock==5.2.0
-more-itertools==10.6.0
-mpmath==1.3.0
-multidict==6.1.0
-murmurhash==1.0.12
-mypy-extensions==1.0.0
-namex==0.0.8
-narwhals==1.41.0
-nbclient==0.10.2
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.4.2
-nltk==3.9.1
-notebook==7.3.2
-notebook_shim==0.2.4
-numba==0.61.2
-numpy==1.26.4
-ollama==0.4.7
-openai==1.37.1
-opencv-python==4.10.0.84
-openpyxl==3.1.5
-opt_einsum==3.4.0
-optree==0.13.1
-orjson==3.10.15
-outcome==1.3.0.post0
-overrides==7.7.0
-packaging @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_81ri4yfpjw/croot/packaging_1720101866878/work
-pandas==2.2.3
-pandocfilters==1.5.1
-parso @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_8824a1w4md/croot/parso_1733963320105/work
-pdfminer.six==20221105
-pexpect==4.9.0
-pillow==11.0.0
-platformdirs @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/platformdirs_1701803010714/work
-plotly==6.1.2
-pluggy @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_bei6q1cvvt/croot/pluggy_1733169621717/work
-preshed==3.0.9
-prometheus_client==0.21.1
-prompt-toolkit @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_c63v4kqjzr/croot/prompt-toolkit_1704404354115/work
-propcache==0.2.1
-proto-plus==1.26.0
-protobuf==4.25.6
-psutil==6.1.1
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
-py-cpuinfo==9.0.0
-pyarrow==19.0.1
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycosat @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_19qelmdbl6/croot/pycosat_1714510743067/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-pydantic==2.10.6
-pydantic_core==2.27.2
-pydeck==0.9.1
-Pygments @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/pygments_1699238063295/work
-pyOpenSSL==25.0.0
-pyparsing==3.2.0
-PySocks @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/pysocks_1699237568675/work
-pytest==8.3.4
-pytest-cov==6.0.0
-pytest-mock==3.14.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-json-logger==3.2.1
-pytz==2024.2
-PyYAML==6.0.2
-pyzmq==26.2.0
-Quandl==3.7.0
-RapidFuzz==3.12.1
-readchar==4.2.1
-referencing==0.35.1
-regex==2024.7.24
-reportlab==4.2.2
-requests @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_ee45nsd33z/croot/requests_1730999134038/work
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.9.4
-rpds-py==0.22.3
-rsa==4.9
-ruamel.yaml @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_35yvtl3p84/croot/ruamel.yaml_1727980165481/work
-ruamel.yaml.clib @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_70l_orv46q/croot/ruamel.yaml.clib_1727769819918/work
-runs==1.2.2
-safetensors==0.5.2
-scikit-image==0.25.0
-scikit-learn==1.6.0
-scipy==1.13.1
-seaborn==0.13.2
-selenium==4.9.1
-Send2Trash==1.8.3
-sentence-transformers==3.4.1
-setuptools==75.1.0
-shap==0.47.2
-shellingham==1.5.4
-simplejson==3.20.1
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-sklearn-compat==0.1.3
-slicer==0.0.8
-smart-open==7.1.0
-smmap==5.0.2
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.6
-spacy==3.8.4
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SQLAlchemy==2.0.37
-srsly==2.5.1
-stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
 streamlit==1.46.0
-streamlit-lottie==0.0.5
-sympy==1.13.1
-tabpy==2.13.0
-tenacity==8.5.0
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
-tensorflow==2.18.0
-termcolor==2.5.0
-terminado==0.18.1
-textblob==0.19.0
-thinc==8.3.4
-threadpoolctl==3.5.0
-tifffile==2024.12.12
-tiktoken==0.8.0
-tinycss2==1.4.0
-tokenizers==0.21.0
-toml==0.10.2
-torch==2.5.1
-torchvision==0.20.1
-tornado==6.4.2
-tqdm @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_24zjwympsr/croot/tqdm_1724853942429/work
-traitlets @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_500m2_1wyk/croot/traitlets_1718227071952/work
-transformers==4.48.1
-trio==0.28.0
-trio-websocket==0.11.1
-truststore @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/truststore_1701805928787/work
-Twisted==24.11.0
-typer==0.15.1
-types-python-dateutil==2.9.0.20241206
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-tzdata==2024.2
-ultralytics==8.3.55
-ultralytics-thop==2.0.13
-undetected-chromedriver==3.5.5
-uri-template==1.3.0
-uritemplate==4.1.1
-urllib3 @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_06_m8gdsy6/croot/urllib3_1727769822458/work
-wasabi==1.1.3
-watchdog==6.0.0
-wcwidth==0.2.13
-weasel==0.4.1
-webcolors==24.11.1
-webdriver-manager==4.0.2
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==14.2
-Werkzeug==3.1.3
-wheel==0.44.0
-widgetsnbextension @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_e5duf_28pa/croot/widgetsnbextension_1733439588359/work
-wrapt==1.17.0
-wsproto==1.2.0
+pandas==2.2.3
+numpy==1.26.4
+matplotlib==3.10.0
+plotly==6.1.2
+scikit-learn==1.6.0
+seaborn==0.13.2
+openpyxl==3.1.5
+pillow==11.0.0
+requests==2.31.0
 xgboost==3.0.2
-xlrd==2.0.1
-xmod==1.8.1
-yarl==1.18.3
-zope.interface==7.2
-zstandard @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a5_i6g4o6n/croot/zstandard_1731356352787/work
+shap==0.47.2
+tensorflow==2.18.0
+torch==2.5.1
+transformers==4.48.1
+sentence-transformers==3.4.1
