--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Core dependencies
 streamlit==1.38.0
 pandas==2.2.3
-numpy==1.26.4
+numpy==2.1.0
 
 # Visualization
 matplotlib==3.9.2
@@ -14,7 +14,7 @@ scikit-learn==1.5.2
 xgboost==2.1.1
 catboost==1.2.5
 shap==0.47.2
-
+tensorflow==2.18.0
 keras==3.7.0
 joblib==1.4.2
 
